--- a/Web/WorkAndTravel.Web/Views/WorkPost/All.cshtml
+++ b/Web/WorkAndTravel.Web/Views/WorkPost/All.cshtml
@@ -20,20 +20,5 @@
         </div>
     }
 </div>
-        <hr />
-        <nav aria-label="...">
-            <ul class="pagination justify-content-center">
-                <li class="page-item @if(!Model.HasPreviousPage) { <text> disabled </text>}">
-                    <a class="page-link" asp-action="All" asp-route-id="@Model.PreviousPageNumber">Previous</a>
-                </li>
-                <li class="page-item active">
-                    <span class="page-link">
-                        @Model.PageNumber
-                        <span class="sr-only">(current)</span>
-                    </span>
-                </li>
-                <li class="page-item">
-                    <a class="page-link @if(!Model.HasNextPage) { <text> disabled </text>}"" asp-action="All" asp-route-id="@Model.NextPageNumber">Next</a>
-                </li>
-            </ul>
-        </nav>
+<hr />
+<partial name="_PagingPartial" model="@Model"/>
