--- a/Web/WorkAndTravel.Web/Views/WorkPost/All.cshtml
+++ b/Web/WorkAndTravel.Web/Views/WorkPost/All.cshtml
@@ -13,7 +13,7 @@
                 <img src="@post.RemoteImageUrl" class="card-img-top" >
                 <div class="card-body">
                     <h5 class="card-title"><a asp-action="ById" asp-route-id="@post.Id">@post.Title</a></h5>
-                    <p class="card-text ">@post.Description</p>
+                    <p class="card-text ">@post.Description.Substring(0,35) ...</p>
                     <p class="card-text"><small class="text-muted">@post.CategoryName</small></p>
                 </div>
             </div>
