--- a/Web/WorkAndTravel.Web/Views/WorkPost/ById.cshtml
+++ b/Web/WorkAndTravel.Web/Views/WorkPost/ById.cshtml
@@ -25,9 +25,7 @@
             </div>
         </div>
     </div>
-    <div class="item-figure">
-        <img class="img-fluid w-50 border mb-2 mt-2" src="@Model.RemoteImageUrl" alt="@Model.Title" />
-    </div>
+    <img class="img-fluid w-50 border mb-3 mt-2" src="@Model.RemoteImageUrl" alt="@Model.Title" />
     <div class="item-feature">
         <div class="col-lg-8">
             <div class="mb-5">
@@ -78,7 +76,6 @@
                 <h3 class="text-primary  mt-3 h5 pl-3 mb-3 ">Post Summary</h3>
                 <ul class="list-unstyled pl-3 mb-0">
                     <li class="mb-2"><i class="fas fa-calendar-alt"></i><strong class="text-black"> Published on:</strong> @Model.CreatedOn.ToShortDateString()</li>
-                    @*<li class="mb-2"><i class="fas fa-clock"></i><strong class="text-black"> Length of work:</strong> @Model.Responsibility</li>*@
                     <li class="star-fill mb-2"><i class="fas fa-star"></i><strong class="text-black"> Our rating: @Model.AverageRating.ToString("0.0")</strong></li>
                     <li class="mb-2"><i class="fas fa-location-arrow"></i><strong class="text-black"> Job Location:</strong>  @Model.AddressName</li>
                     <li class="mb-2"><i class="fas fa-wallet"></i><strong class="text-black"> Salary: </strong> @Model.PaymentPerDay $</li>
@@ -120,23 +117,24 @@
         });
     </script>
     <!--Stars colouring-->
-    <script>
+    @if (this.User.Identity.IsAuthenticated)
+    {
+        <script>
             $("li[data-rating]").click(function () {
                 var rating = $(this).attr('id');
                 var res = rating.split("-");
                 rating = res[1];
-
                 for (var i = 0; i < 5; i++) {
                     if (i <= rating) {
                         $('#q6-' + i).addClass("star-fill");
                     }
                 }
             });
-
             $("li[data-rating]").hover(function () {
                 $(this).addClass("star-fill").prevUntil("star-fill").addClass("star-fill");
             }, function () {
                 $(this).nextUntil("star-fill").removeClass("star-fill");
             });
-    </script>
+        </script>
+    }
 }
