Small changes in footer

--- a/Web/WorkAndTravel.Web/Views/Shared/_Layout.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Shared/_Layout.cshtml
@@ -49,7 +49,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="WorkPost" asp-action="All">All posts</a>
+            <a asp-area="" asp-controller="WorkPost" asp-action="Create">Create post</a>
         </div>
     </footer>
 
