--- a/Web/WorkAndTravel.Web/Views/WorkPost/ById.cshtml
+++ b/Web/WorkAndTravel.Web/Views/WorkPost/ById.cshtml
@@ -150,7 +150,7 @@
             <input type="hidden" name="ParentId" value="0" />
             <div>
                 <label for="Content"></label>
-                <textarea name="Content" id="Content" class="form-control"></textarea>
+                <textarea name="Content" id="Content" class="mb-3 form-control" rows="4"></textarea>
             </div>
             <div>
                 <input type="submit" class="btn btn-primary" value="Add comment" />
