--- a/Web/WorkAndTravel.Web/Views/Shared/_Layout.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Shared/_Layout.cshtml
@@ -28,12 +28,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="WorkPost" asp-action="All">All Posts</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ContactUs" asp-action="Index">Contact Us</a>
+                        </li>
                         @if (this.User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="WorkPost" asp-action="Create">Create Post</a>
-                            </li>
-                        }
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="WorkPost" asp-action="Create">Create Post</a>
+                    </li>}
                     </ul>
                 </div>
             </div>
