--- a/Web/WorkAndTravel.Web/Views/Home/Index.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Home/Index.cshtml
@@ -4,6 +4,16 @@
     this.ViewData["Title"] = "Home Page";
 }
 
+@if (this.TempData.ContainsKey("Message"))
+{
+<div class="alert alert-warning alert-dismissible fade show">
+    @this.TempData["Message"]
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+}
+
 <div class="text-center">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
 
