--- a/Web/WorkAndTravel.Web/wwwroot/css/style.css
+++ b/Web/WorkAndTravel.Web/wwwroot/css/style.css
@@ -21,7 +21,6 @@ body a {
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
     text-decoration: none;
 }
 
@@ -40,7 +39,6 @@ input[type="submit"] {
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
     letter-spacing: 1px;
 	font-family: 'Lato', sans-serif;
   
@@ -52,7 +50,6 @@ input[type="button"],input[type="submit"],textarea{
 	-webkit-transition:0.5s all;
 	-moz-transition:0.5s all;
 	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
 	letter-spacing: 1px;
 	font-family: 'Lato', sans-serif;
 }
@@ -1072,20 +1069,19 @@ footer ul li.hd {
 }
 
 button.btn1 {
-	color: #fff;
-	border: none;
-	padding: 12px 0;
-	text-align: center;
-	text-decoration: none;
-	background: #ff3d00 ;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-o-transition: 0.5s all;
-	-ms-transition: 0.5s all;
-	transition: 0.5s all;
-	float: right;
-	cursor: pointer;
-	width: 20%;
+    /*color: #0275d8;
+    border: #0275d8;*/
+    /* padding: 12px 0;
+    text-align: center;
+    text-decoration: none;
+    background: #0275d8;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    transition: 0.5s all;*/
+    float: right;
+    cursor: pointer;
+    width: 40%;
 }
 
 /*--//footer--*/
