--- a/Web/WorkAndTravel.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Web/WorkAndTravel.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -12,8 +12,8 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control" disabled />
             </div>
             <div class="form-group">
                 <label asp-for="Input.PhoneNumber"></label>
