--- a/Web/WorkAndTravel.Web/Views/WorkPost/ById.cshtml
+++ b/Web/WorkAndTravel.Web/Views/WorkPost/ById.cshtml
@@ -85,16 +85,41 @@
             </div>
         </div>
     </div>
-    <img class="img-fluid w-50 border mb-3 mt-2" src="@Model.RemoteImageUrl" alt="@Model.Title" />
+    <div id="carouselExampleControls" class="carousel slide w-50" data-ride="carousel">
+        <div class="carousel-inner">
+            @for (int i = 0; i < Model.RemoteImageUrl.Count(); i++)
+            {
+                var item = Model.RemoteImageUrl.ElementAt(i);
+                if (i == 0)
+                {
+                    <div class="carousel-item active">
+                        <img class="snimka d-block border w-100 mb-3 mt-2" src="@item">
+                    </div>
+                    continue;
+                }
+                <div class="carousel-item">
+                    <img class="snimka d-block w-100 border mb-3 mt-2" src="@item">
+                </div>
+            }
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
     <div class="item-feature">
         <div class="col-lg-auto">
             <div class="mb-auto">
                 <h2 class="h4 d-flex align-items-center mb-4 text-primary">
                     <span class="icon-align-left mr-3">Job Description</span>
                 </h2>
-                <p>
-                    @Model.Description
-                </p>
+                    <p  >
+                        @Model.Description
+                    </p>
             </div>
             <div class="mb-5">
                 <h3 class="h5 d-flex align-items-center mb-4 text-primary"><span class="icon-rocket mr-3">Information about your responsibilities</span></h3>
