--- a/Web/WorkAndTravel.Web/Views/WorkPost/All.cshtml
+++ b/Web/WorkAndTravel.Web/Views/WorkPost/All.cshtml
@@ -3,17 +3,27 @@
     this.ViewData["Title"] = "All workposts page";
 }
 
+<div class="dropdown text-md-left text-center float-right bg-white">
+    <label class="mr-2">Filter:</label>
+    <button class="btn btn-lg dropdown-toggle" onclick="sort()"></button>
+    <div class="dropdown-menu" hidden="hidden">
+        <a asp-controller="WorkPost" asp-action="SortByName" class="dropdown-item">Title Ascending</a>
+        <a asp-controller="WorkPost" asp-action="SortByDate" class="dropdown-item">Lastly added</a>
+        <a asp-controller="WorkPost" asp-action="SortBySalary" class="dropdown-item">Payment</a>
+    </div>
+</div>
 <h1>@this.ViewData["Title"]</h1>
+
 <hr />
 <div class="row">
-    @foreach(var post in this.Model.WorkPosts)
+    @foreach (var post in this.Model.WorkPosts)
     {
         <div class="card-deck card-columns media col-md-3">
             <div class="card">
-                <img src="@post.RemoteImageUrl" class="card-img-top" >
+                <img src="@post.RemoteImageUrl" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title"><a asp-action="ById" asp-route-id="@post.Id">@post.Title</a></h5>
-                    <p class="card-text ">@post.Description.Substring(0,35) ...</p>
+                    <p class="card-text ">@post.Description.Substring(0, 35) ...</p>
                     <p class="card-text"><small class="text-muted">@post.CategoryName</small></p>
                 </div>
             </div>
@@ -21,4 +31,18 @@
     }
 </div>
 <hr />
-<partial name="_PagingPartial" model="@Model"/>
+@section Scripts{ 
+    <script>
+        function sort() {
+            const divItem = $('.dropdown-menu');
+            if (divItem.attr('hidden')) {
+                divItem.removeAttr('hidden');
+                divItem.show('slow');
+            } else {
+                divItem.attr('hidden', 'hidden');
+                divItem.hide('slow');
+            }           
+        }
+    </script>
+}
+<partial name="_PagingPartial" model="@Model" />
