--- a/Web/WorkAndTravel.Web/Views/Account/Index.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Account/Index.cshtml
@@ -9,55 +9,39 @@
     <a class="btn btn-primary mt-2 float-right mr-3" asp-area="" asp-action="MyPosts">My posts</a>
     <h1>@this.ViewData["Title"]</h1>
     <hr />
-    <div class="container">
+    <div>
         <div class="row">
             <div class="col-lg-3 col-md-4">
                 <div class="text-center card-box">
                     <div class="member-card">
                         <ul>
                             <li class="thumb-xl member-thumb m-b-10 center-block">
-                                <img src="@Model.ProfilePictureUrl" class="img-circle img-thumbnail" alt="profile-image">
+                                <img src="@Model.ProfilePictureUrl" class="img-circle img-thumbnail img-fluid" alt="profile-image">
                             </li>
 
-                            <li class="col-lg-12 mt-md-5 w-100">
-                                <a class="btn btn-secondary">Edit</a>
+                            <li class="col-lg-12 mt-3 w-100">
+                                <a asp-controller="Account" asp-action="Edit" class="btn btn-secondary ">Edit</a>
                             </li>
                         </ul>
                     </div>
                 </div>
+                <div class="text-center">
+                    <strong class="text-black"> Created on: </strong><time datetime="@Model.CreatedOn.ToString("O")"></time>
+                </div>
+                <hr />
             </div>
-            <ul>
-                <li>
-                    <div class="text-center card-box">
-                        <strong class="text-black">Full Name: </strong>
-                        @Model.FirstName @Model.LastName
+            <div class="col-md-6 ml-5 mt-3">
+                <div class="card">
+                    <div class="card-header font-weight-bold text-center">User Details</div>
+                    <div class="card-body">
+                        <p><b>First Name:</b> @Model.FirstName <b class="ml-5">Last Name:</b> @Model.LastName</p>
+                        <br />
+                        <p><b>Username:</b> @Model.Username <b class="ml-3">Email:</b> @Model.Email</p>
                     </div>
-                </li>
-                <li>
-                    <div class="text-center">
-                        <strong class="text-black">Username: </strong>
-                        @this.User.Identity.Name
-                    </div>
-                </li>
-                <li>
-                    <div class="text-center">
-                        <strong class="text-black">Age: </strong>
-                        @Model.Age
-                    </div>
-                </li>
-                <li>
-                    <div class="text-center">
-                        <strong class="text-black">Email: </strong>
-                        @Model.Email
-                    </div>
-                </li>
-                <li>
-                    <div class="text-center">
-                        <strong class="text-black"> Created on: </strong><time datetime="@Model.CreatedOn.ToString("O")"></time>
-                    </div>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </div>
- }
+
+}
 
