--- a/Web/WorkAndTravel.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     @if (this.SignInManager.IsSignedIn(this.User))
     {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index" title="Manage"> Welcome @(this.User.Identity.Name)!</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index" title="Manage"> Welcome @this.User.Identity.Name</a>
     </li>
         if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
         {
