--- a/Web/WorkAndTravel.Web/Views/Account/Applicants.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Account/Applicants.cshtml
@@ -1,25 +1,27 @@
 ﻿@model IEnumerable<WorkAndTravel.Web.ViewModels.Account.PostsListViewModel>
 
 @{
-    this.ViewData["Title"] = "Posts you have applied to";
+    this.ViewData["Title"] = "Applicants to my posts";
 }
 
 <h1>@this.ViewData["Title"]</h1>
 <hr />
-<p><b>After you have applied to a post, the creator will contact you via email.</b></p>
 @foreach (var item in Model)
 {
+    if (item.WorkPosts != null)
+    {
     <table class="table table-bordered table-hover table-striped">
         <thead>
-            @foreach (var post in item.WorkPosts.Where(x => x.ApplicationUser.UserName == this.User.Identity.Name))
+            @foreach (var post in item.WorkPosts)
             {
                 <tr>
                     <th>
-                        <a asp-action="Index">@post.ApplicationUser.UserName</a> -
                         <a asp-controller="WorkPost" asp-action="ById" asp-route-id="@post.WorkPost.Id">@post.WorkPost.Title</a>
+                       - @post.ApplicationUser.UserName 
                     </th>
                 </tr>
             }
         </thead>
     </table>
+    }
 }
