--- a/Web/WorkAndTravel.Web/Views/Account/Index.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Account/Index.cshtml
@@ -5,9 +5,13 @@
 
 @if (this.User.Identity.IsAuthenticated)
 {
-    <a class="btn btn-primary mt-2 float-right" asp-area="Identity" asp-page="/Account/Manage/Index">Edit</a>
     <a class="btn btn-primary mt-2 float-right mr-3" asp-area="" asp-action="MyPosts">My posts</a>
     <a class="btn btn-primary mt-2 float-right mr-3" asp-area="" asp-action="Applications">My applications</a>
+    if (Model.WorkPosts != null)
+    {
+        <a class="btn btn-primary mt-2 float-right mr-3" asp-area="" asp-action="Applicants">Applicants</a>
+    }
+
     <h1>@this.ViewData["Title"]</h1>
     <hr />
     <div>
@@ -19,6 +23,9 @@
                             <li class="thumb-xl member-thumb m-b-10 center-block">
                                 <img src="@Model.ProfilePictureUrl" class="img-circle img-thumbnail img-fluid" alt="profile-image">
                             </li>
+
+                            <li class="col-lg-12 mt-3 w-100">
+                                <a class="btn btn-secondary" asp-area="Identity" asp-page="/Account/Manage/Index">Edit</a>
                         </ul>
                     </div>
                 </div>
