--- a/Web/WorkAndTravel.Web/Views/Account/Applicants.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Account/Applicants.cshtml
@@ -17,7 +17,7 @@
                 <tr>
                     <th>
                         <a asp-controller="WorkPost" asp-action="ById" asp-route-id="@post.WorkPost.Id">@post.WorkPost.Title</a>
-                       - @post.ApplicationUser.UserName 
+                       - @post.ApplicationUser.Email 
                     </th>
                 </tr>
             }
