--- a/Web/WorkAndTravel.Web/Views/WorkPost/Search.cshtml
+++ b/Web/WorkAndTravel.Web/Views/WorkPost/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model WorkAndTravel.Web.ViewModels.WorkPosts.WorkPostsListViewModel
+﻿@model WorkAndTravel.Web.ViewModels.WorkPosts.SearchInListViewModel
 @{
     this.ViewData["Title"] = "Workposts page";
 }
@@ -30,4 +30,3 @@
     }
 </div>
 <hr />
-<partial name="_PagingPartial" model="@Model" />
