--- a/Web/WorkAndTravel.Web/wwwroot/css/style.css
+++ b/Web/WorkAndTravel.Web/wwwroot/css/style.css
@@ -2263,7 +2263,13 @@ img.zoom-img {
     display: block;
 }
 
+/*Comment image*/
 img.commentImage {
     width: 60px;
     height: 60px;
+}
+
+/*Search bar*/
+div.mySearch{
+    position: center
 }
